kubernetes/apps/70ld/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: websites
  labels:
    pod-security.kubernetes.io/enforce: privileged
