kubernetes/apps/70ld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sevenzerold-site
  namespace: websites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sevenzerold-site
  template:
    metadata:
      labels:
        app: sevenzerold-site
    spec:
      containers:
        - name: sevenzerold-site
          image: 192.168.7.210:5000/70ld-site:0.0.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
