kubernetes/apps/70ld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sevenzerold-site-svc
  namespace: websites
spec:
  selector:
    app: sevenzerold-site
    type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
