kubernetes/apps/70ld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sevenzerold-site-ingress
  namespace: websites
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.70ld.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sevenzerold-site-svc
                port:
                  number: 80
